Users model and methods in swagger
